@@ -1,5 +1,5 @@
 .\"
-.\"   $Id: radvdump.8.man,v 1.3 2001/12/31 11:40:56 psavola Exp $
+.\"   $Id: radvdump.8.man,v 1.4 2005/10/18 06:52:33 psavola Exp $
 .\"
 .\"   Authors:
 .\"    Lars Fenneberg		<lf@elemental.net>	 
@@ -46,7 +46,9 @@ Displays a short usage description and then aborts.
 .BR "\-f" , " \-\-file\-format"
 Output received router advertisements in the format of the
 .B radvd
-configuration file. 
+configuration file.
+Since radvd 0.9, this is the default and the switch is provided
+for backward compatibility only.
 .TP
 .BR "\-e" , " \-\-exclude-defaults"
 Exclude default valued options from configuration file format.
